# mcp-zip

./: .gitignore  LICENSE  README.md  demo.tape  pyproject.toml
context/: MEMORY.md  bugs.md  decisiones_tecnicas.md  implementacion.md  planificacion.md
plantillas/: RESUMEN.md  decisiones.md  errores.md  implementacion.md  plan.md
src/mcp_zip/: __init__.py  almacenamiento.py  almacenamiento_json.py  configuracion.py  formateador.py  herramientas.py  importador.py  motor.py  server.py  tfidf.py
tests/: test_almacenamiento_json.py  test_fase3.py  test_formateador.py  test_herramientas.py  test_tfidf.py
