[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-zip"
version = "0.2.0"
description = "Servidor MCP que comprime el contexto de tu agente de IA. Ahorra tokens, evita alucinaciones."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "nanodaniel69", email = "nanovargas2421@gmail.com" }
]
keywords = ["mcp", "memory", "context", "ai", "tokens", "compaction", "spanish"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Natural Language :: Spanish",
]
dependencies = [
    "fastmcp>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
mcp-zip = "mcp_zip.server:main"

[project.urls]
Homepage = "https://github.com/nanodaniel69/mcp-zip"
Repository = "https://github.com/nanodaniel69/mcp-zip"
Issues = "https://github.com/nanodaniel69/mcp-zip/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_zip"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
